--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,15 +3,15 @@ spring:
     name: api-gateway
 server:
   port: 8082
-#zuul:
-#  routes:
-#    current-data-microservice:
-#      path: /api2/**
-#      service-id: current-data-microservice
+zuul:
+  routes:
+    product-api:
+      path: /api/**
+      #service-id: persist-big-data
 eureka:
   client:
     service-url:
-      defaulZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka
 hystrix:
   command:
     default:
