Configured API Gateway, tested routes, and successfully accessed endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port=2020
+spring.application.name=APIGateway
+
+#persist and current are the route urls
+#example: http://localhost:2020/historic/runjob
+#example: http://localhost:2020/current/stock/profile/GOOG
+zuul.routes.historic.service-id=PersistBigData 
+zuul.routes.current.service-id=CurrentDataMS  
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+#To handle timeout related issues
+zuul.host.socket-timeout-millis=180000
+ribbon.eureka.enabled=true
+#30 second timeout
+ribbon.ReadTimeout=60000
+ribbon.ConnectTimeout=60000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=100000
+
 
