--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,17 @@ server.port=2020
 spring.application.name=APIGateway
 
 #persist and current are the route urls
-#example: http://localhost:2020/historic/runjob
-#example: http://localhost:2020/current/stock/profile/GOOG
-zuul.routes.historic.service-id=PersistBigData 
+#example: http://localhost:2020/batch/admin/runjob
+#example: http://localhost:2020/current/user/stock/profile/GOOG
+zuul.routes.batch.service-id=PersistBigData
+#zuul.routes.batch.path=/admin/runjob/ 
 zuul.routes.current.service-id=CurrentDataMS  
+#zuul.routes.current.path=/user/stock/**
+
+
+zuul.routes.auth.service-id=AuthMicroservice  
+#zuul.routes.auth.path=/admin/**
+#zuul.routes.auth.service-id=AuthMicroservice 
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
