--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=2020
 spring.application.name=APIGateway
 
+hystrix.command.default.execution.timeout.enabled=false
 #persist and current are the route urls
 #example: http://localhost:2020/batch/admin/runjob
 #example: http://localhost:2020/current/user/stock/profile/GOOG
